Integrasi BitChat dan UI debug

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,5 @@ dependencyResolutionManagement {
 rootProject.name = 'Organic Maps'
 include ':app'
 include ':sdk'
+include(":bitchat")
+project(":bitchat").projectDir = file("bitchat-android-0.8.2")
