--- a/bitchatcore/src/main/AndroidManifest.xml
+++ b/bitchatcore/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.bitchat.corebridge">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
   <application />
 </manifest>
