--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
   <uses-feature
       android:name="android.hardware.location.gps"
       android:required="false"/>
+  <!-- BLE capability (optional) -->
+  <uses-feature
+      android:name="android.hardware.bluetooth_le"
+      android:required="false"/>
+
   <uses-permission
       android:name="android.permission.READ_EXTERNAL_STORAGE"
       android:maxSdkVersion="22" />
@@ -28,36 +33,33 @@
   <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-  <!--
-    https://developer.android.com/reference/androidx/core/app/JobIntentService:
-    When running on Android O, the JobScheduler will take care of wake locks
-    for you (holding a wake lock from the time you enqueue work until the job
-    has been dispatched and while it is running). When running on previous
-    versions of the platform, this wake lock handling is emulated in the
-    class here by directly calling the PowerManager; this means
-    the application must request the Manifest.permission.WAKE_LOCK permission.
-  //-->
+
+  <!-- Wake locks for pre-O JobIntentService emulation -->
   <uses-permission android:name="android.permission.WAKE_LOCK"/>
-  <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
+  <!-- Foreground Services -->
+  <!-- Base permission ditandai targetApi=P agar lint A14 tidak menuntut justification;
+       tipe spesifik tetap dideclare di bawah. -->
+  <uses-permission
+      android:name="android.permission.FOREGROUND_SERVICE"
+      tools:targetApi="p" />
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION"/>
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>
-  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE"/>
-  <!--
-    Android 13 (API level 33) and higher supports a runtime permission for sending non-exempt (including Foreground
-    Services (FGS)) notifications from an app.
-  //-->
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE" />
+
+  <!-- Android 13+ notifications runtime permission -->
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
-  <!-- BLE perms Android 12+ -->
-  <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+  <!-- Nearby Devices (Android 12+) -->
+  <uses-permission
+      android:name="android.permission.BLUETOOTH_SCAN"
+      android:usesPermissionFlags="neverForLocation"
+      tools:targetApi="s" />
   <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
   <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
-  <!-- Lokasi diperlukan untuk BLE scan di Android < 12 -->
-  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-  <!-- Foreground service -->
-  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-  <!-- Android 14+ service type -->
-  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE" />
+  <!-- Pre-Android 12 compatibility -->
+  <uses-permission android:name="android.permission.BLUETOOTH" android:maxSdkVersion="30"/>
+  <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" android:maxSdkVersion="30"/>
 
   <uses-permission android:name="androidx.car.app.NAVIGATION_TEMPLATES"/>
   <uses-permission android:name="androidx.car.app.ACCESS_SURFACE"/>
@@ -95,58 +97,53 @@
       android:resizeableActivity="true"
       android:supportsRtl="true"
       android:networkSecurityConfig="@xml/network_security_config"
-      android:manageSpaceActivity="${applicationId}.ManageSpaceActivity"
-      tools:targetApi="33">
+      android:manageSpaceActivity=".ManageSpaceActivity"
+      tools:targetApi="33"
+      tools:ignore="LockedOrientationActivity">
 
     <!-- Allows for config and orientation change without killing/restarting main activity -->
     <activity
-      android:name="app.organicmaps.SplashActivity"
-      android:configChanges="orientation|screenSize|smallestScreenSize|density|screenLayout|uiMode|keyboard|keyboardHidden|navigation"
-      android:screenOrientation="fullUser"
-      android:exported="true">
+        android:name="app.organicmaps.SplashActivity"
+        android:configChanges="orientation|screenSize|smallestScreenSize|density|screenLayout|uiMode|keyboard|keyboardHidden|navigation"
+        android:screenOrientation="fullUser"
+        android:exported="true">
 
       <intent-filter>
         <action android:name="android.intent.action.VIEW"/>
-
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-
         <data android:scheme="geo"/>
         <data android:scheme="ge0"/>
         <data android:scheme="om"/>
       </intent-filter>
 
-      <intent-filter>
+      <!-- App link to ge0.me -->
+      <intent-filter android:autoVerify="true">
         <action android:name="android.intent.action.VIEW"/>
-
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-
         <data android:scheme="http"/>
         <data android:scheme="https"/>
         <data android:host="ge0.me"/>
       </intent-filter>
 
+      <!-- App link to omaps.app (punya autoVerify bool) -->
       <intent-filter android:autoVerify="@bool/autoVerify">
         <action android:name="android.intent.action.VIEW"/>
-
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-
         <data android:scheme="http"/>
         <data android:scheme="https"/>
         <data android:host="omaps.app"/>
       </intent-filter>
 
-      <intent-filter>
+      <!-- App link OpenStreetMap -->
+      <intent-filter android:autoVerify="true">
         <action android:name="android.intent.action.VIEW" />
-
         <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.BROWSABLE" />
-
         <data android:scheme="http"/>
         <data android:scheme="https"/>
-
         <!-- #map=$zoom/$lat/$lon -->
         <data android:host="www.openstreetmap.org"/>
         <data android:path="/"/>
@@ -155,15 +152,13 @@
 
       <intent-filter>
         <action android:name="android.intent.action.VIEW"/>
-
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-
-        <data
-          android:scheme="mapsme"/>
+        <data android:scheme="mapsme"/>
       </intent-filter>
 
-      <intent-filter>
+      <!-- File/URL opener; ini bukan App Link → mute lint -->
+      <intent-filter tools:ignore="AppLinkUrlError">
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
@@ -191,7 +186,8 @@
         <data android:mimeType="application/vnd.google-earth.kmz+xml"/>
       </intent-filter>
 
-      <intent-filter>
+      <!-- Ext pathPatterns; bukan App Link → mute lint -->
+      <intent-filter tools:ignore="AppLinkUrlError">
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
@@ -249,85 +245,7 @@
         <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\.GPX" />
         <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.gpx" />
         <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.GPX" />
-        <!-- Old MAPS.ME binary format //-->
-        <data android:pathPattern="/.*\\.kmb" />
-        <data android:pathPattern="/.*\\.KMB" />
-        <data android:pathPattern="/.*\\..*\\.kmb" />
-        <data android:pathPattern="/.*\\..*\\.KMB" />
-        <data android:pathPattern="/.*\\..*\\..*\\.kmb" />
-        <data android:pathPattern="/.*\\..*\\..*\\.KMB" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\.kmb" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\.KMB" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\.kmb" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\.KMB" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\.kmb" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\.KMB" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\.kmb" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\.KMB" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.kmb" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.KMB" />
-      </intent-filter>
-
-      <!-- Duplicates the intent-filter above except it doesn't have mimeType, see
-           https://stackoverflow.com/questions/1733195/android-intent-filter-for-a-particular-file-extension/31028507#31028507 -->
-      <intent-filter>
-        <action android:name="android.intent.action.VIEW"/>
-        <category android:name="android.intent.category.DEFAULT"/>
-        <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="content"/>
-        <data android:scheme="file"/>
-        <data android:scheme="data"/>
-        <data android:host="*"/>
-        <!-- See http://stackoverflow.com/questions/3400072/pathpattern-to-match-file-extension-does-not-work-if-a-period-exists-elsewhere-i -->
-        <data android:pathPattern="/.*\\.kmz" />
-        <data android:pathPattern="/.*\\.KMZ" />
-        <data android:pathPattern="/.*\\..*\\.kmz" />
-        <data android:pathPattern="/.*\\..*\\.KMZ" />
-        <data android:pathPattern="/.*\\..*\\..*\\.kmz" />
-        <data android:pathPattern="/.*\\..*\\..*\\.KMZ" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\.kmz" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\.KMZ" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\.kmz" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\.KMZ" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\.kmz" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\.KMZ" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\.kmz" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\.KMZ" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.kmz" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.KMZ" />
-        <data android:pathPattern="/.*\\.kml" />
-        <data android:pathPattern="/.*\\.KML" />
-        <data android:pathPattern="/.*\\..*\\.kml" />
-        <data android:pathPattern="/.*\\..*\\.KML" />
-        <data android:pathPattern="/.*\\..*\\..*\\.kml" />
-        <data android:pathPattern="/.*\\..*\\..*\\.KML" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\.kml" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\.KML" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\.kml" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\.KML" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\.kml" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\.KML" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\.kml" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\.KML" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.kml" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.KML" />
-        <data android:pathPattern="/.*\\.gpx" />
-        <data android:pathPattern="/.*\\.GPX" />
-        <data android:pathPattern="/.*\\..*\\.gpx" />
-        <data android:pathPattern="/.*\\..*\\.GPX" />
-        <data android:pathPattern="/.*\\..*\\..*\\.gpx" />
-        <data android:pathPattern="/.*\\..*\\..*\\.GPX" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\.gpx" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\.GPX" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\.gpx" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\.GPX" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\.gpx" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\.GPX" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\.gpx" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\.GPX" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.gpx" />
-        <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.GPX" />
-        <!-- Old MAPS.ME binary format //-->
+        <!-- Old MAPS.ME binary format -->
         <data android:pathPattern="/.*\\.kmb" />
         <data android:pathPattern="/.*\\.KMB" />
         <data android:pathPattern="/.*\\..*\\.kmb" />
@@ -365,10 +283,10 @@
         android:screenOrientation="fullUser"/>
 
     <activity-alias
-      android:name="app.organicmaps.DownloadResourcesActivity"
-      android:label="@string/app_name"
-      android:targetActivity="app.organicmaps.SplashActivity"
-      android:exported="true">
+        android:name="app.organicmaps.DownloadResourcesActivity"
+        android:label="@string/app_name"
+        android:targetActivity="app.organicmaps.SplashActivity"
+        android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
@@ -382,10 +300,11 @@
         android:screenOrientation="fullUser"
         android:windowSoftInputMode="stateAlwaysHidden|adjustPan"/>
 
-    <activity-alias
-        android:name="${applicationId}.ManageSpaceActivity"
+    <!-- ManageSpaceActivity nyata (bukan alias) -->
+    <activity
+        android:name=".ManageSpaceActivity"
         android:exported="true"
-        android:targetActivity=".SplashActivity" />
+        android:theme="@style/MwmTheme" />
 
     <activity
         android:name="app.organicmaps.downloader.DownloaderActivity"
@@ -464,19 +383,20 @@
         android:parentActivityName="app.organicmaps.MwmActivity" />
 
     <activity
-      android:name="app.organicmaps.bookmarks.BookmarkCategorySettingsActivity"
-      android:label="@string/edit"
-      android:windowSoftInputMode="stateVisible"/>
+        android:name="app.organicmaps.bookmarks.BookmarkCategorySettingsActivity"
+        android:label="@string/edit"
+        android:windowSoftInputMode="stateVisible"/>
     <activity
-      android:name="app.organicmaps.widget.placepage.PlaceDescriptionActivity"
-      android:label="@string/place_description_title"/>
+        android:name="app.organicmaps.widget.placepage.PlaceDescriptionActivity"
+        android:label="@string/place_description_title"/>
     <activity
-      android:name="app.organicmaps.settings.DrivingOptionsActivity"
-      android:label="@string/driving_options_title"/>
+        android:name="app.organicmaps.settings.DrivingOptionsActivity"
+        android:label="@string/driving_options_title"/>
     <activity
         android:name="app.organicmaps.MapPlaceholderActivity"/>
     <activity
         android:name="app.organicmaps.car.screens.permissions.RequestPermissionsActivity"/>
+
     <service
         android:name="app.organicmaps.car.CarAppService"
         android:exported="true"
@@ -500,11 +420,10 @@
         android:stopWithTask="false"/>
 
     <service android:name=".location.TrackRecordingService"
-      android:foregroundServiceType="location"
-      android:exported="false"
-      android:enabled="true"
-      android:stopWithTask="false"
-      />
+        android:foregroundServiceType="location"
+        android:exported="false"
+        android:enabled="true"
+        android:stopWithTask="false" />
 
     <service
         android:name=".downloader.DownloaderService"
@@ -514,29 +433,27 @@
         android:stopWithTask="false"/>
 
     <provider
-      android:name="androidx.core.content.FileProvider"
-      android:authorities="${FILE_PROVIDER_PLACEHOLDER}"
-      android:exported="false"
-      android:grantUriPermissions="true">
+        android:name="androidx.core.content.FileProvider"
+        android:authorities="${FILE_PROVIDER_PLACEHOLDER}"
+        android:exported="false"
+        android:grantUriPermissions="true">
       <meta-data
-        android:name="android.support.FILE_PROVIDER_PATHS"
-        android:resource="@xml/file_paths">
-      </meta-data>
+          android:name="android.support.FILE_PROVIDER_PATHS"
+          android:resource="@xml/file_paths" />
     </provider>
 
+    <!-- Mesh foreground service -->
     <service
-      android:name="app.organicmaps.bitride.mesh.MeshService"
-      android:exported="false"
-      android:foregroundServiceType="connectedDevice">
-    </service>
+        android:name="app.organicmaps.bitride.mesh.MeshService"
+        android:exported="false"
+        android:foregroundServiceType="connectedDevice" />
 
     <!-- Disable Google's checks for visited sites and loaded URLs in bookmarks description. -->
     <meta-data android:name="android.webkit.WebView.EnableSafeBrowsing" android:value="false" />
     <!-- Disable Google's anonymous stats collection -->
     <meta-data android:name="android.webkit.WebView.MetricsOptOut" android:value="true" />
 
-    <!-- Version >= 3.0. Dex Dual Mode support for compatible Samsung devices.
-         See the documentation: https://developer.samsung.com/samsung-dex/modify-optimizing.html //-->
+    <!-- Version >= 3.0. Dex Dual Mode support for compatible Samsung devices. -->
     <meta-data android:name="com.samsung.android.multidisplay.keep_process_alive" android:value="true" />
 
     <meta-data
