--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ buildscript {
 plugins {
   id 'com.android.application'
   id 'org.jetbrains.kotlin.android'
+  id 'org.jetbrains.kotlin.plugin.compose'
 }
 
 if (googleFirebaseServicesEnabled) {
@@ -67,6 +68,11 @@ android {
   buildFeatures {
     dataBinding = true
     buildConfig = true
+    compose = true
+  }
+
+  composeOptions {
+    kotlinCompilerExtensionVersion = '1.5.3'
   }
 
   // Users are complaining that the app should be re-downloaded from the Play Store after changing the language.
@@ -299,6 +305,16 @@ dependencies {
   implementation 'com.github.devnullorthrow:MPAndroidChart:3.2.0-alpha'
   implementation 'net.jcip:jcip-annotations:1.0'
   implementation project(':bitchatcore')
+
+  // Jetpack Compose
+  implementation platform('androidx.compose:compose-bom:2024.05.00')
+  implementation 'androidx.compose.ui:ui'
+  implementation 'androidx.compose.ui:ui-tooling-preview'
+  implementation 'androidx.compose.material3:material3'
+  implementation 'androidx.activity:activity-compose:1.9.2'
+  implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.9.1'
+  implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.9.1'
+  debugImplementation 'androidx.compose.ui:ui-tooling'
 
   // Tests
   androidTestImplementation 'androidx.test.ext:junit:1.2.1'
