--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -299,6 +299,10 @@
         android:screenOrientation="fullUser"
         android:windowSoftInputMode="stateAlwaysHidden|adjustPan"/>
 
+    <activity
+        android:name="com.undefault.bitride.auth.AuthActivity"
+        android:exported="false" />
+
     <!-- ManageSpaceActivity nyata (bukan alias) -->
     <activity
         android:name=".ManageSpaceActivity"
