--- a/app/build.gradle
+++ b/app/build.gradle
@@ -306,6 +306,11 @@ dependencies {
   implementation 'net.jcip:jcip-annotations:1.0'
   implementation project(':bitchatcore')
 
+  // ML Kit dependencies for KTP scanning and OCR
+  implementation 'com.google.android.gms:play-services-mlkit-document-scanner:16.0.0-beta1'
+  implementation 'com.google.mlkit:text-recognition:16.0.1'
+  implementation 'io.coil-kt:coil-compose:2.7.0'
+
   // Jetpack Compose
   implementation platform('androidx.compose:compose-bom:2024.05.00')
   implementation 'androidx.compose.ui:ui'
