--- a/app/build.gradle
+++ b/app/build.gradle
@@ -285,6 +285,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:33.16.0')
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-crashlytics-ndk'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
   }
 
   // Workaround for duplicate classes
@@ -305,6 +306,8 @@ dependencies {
   implementation 'com.github.devnullorthrow:MPAndroidChart:3.2.0-alpha'
   implementation 'net.jcip:jcip-annotations:1.0'
   implementation project(':bitchatcore')
+  implementation 'androidx.datastore:datastore-preferences:1.1.1'
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.8.1'
 
   // ML Kit dependencies for KTP scanning and OCR
   implementation 'com.google.android.gms:play-services-mlkit-document-scanner:16.0.0-beta1'
