--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
     // Tambahan ini membantu Gradle memakai satu classloader plugin Kotlin untuk semua subproject
     id 'org.jetbrains.kotlin.android'         version '2.0.21' apply false
     id 'org.jetbrains.kotlin.plugin.parcelize' version '2.0.21' apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
 
 def run(cmd) {
