--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ buildscript {
 plugins {
   id 'com.android.application'
   id 'org.jetbrains.kotlin.android'
-  id 'org.jetbrains.kotlin.plugin.compose'
+  id 'org.jetbrains.kotlin.plugin.compose' version '2.2.10'
 }
 
 if (googleFirebaseServicesEnabled) {
