--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,11 @@ import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.11.0' apply false
-    id 'com.android.library'     version '8.11.0' apply false
-    // Tambahan ini membantu Gradle memakai satu classloader plugin Kotlin untuk semua subproject
-    id 'org.jetbrains.kotlin.android'         version '2.0.21' apply false
-    id 'org.jetbrains.kotlin.plugin.parcelize' version '2.0.21' apply false
-    id 'com.google.gms.google-services' version '4.4.2' apply false
+    id 'com.android.application' apply false
+    id 'com.android.library'     apply false
+    id 'org.jetbrains.kotlin.android'         apply false
+    id 'org.jetbrains.kotlin.plugin.parcelize' apply false
+    // NB: versi plugin ditentukan di settings.gradle (pluginManagement)
 }
 
 def run(cmd) {
