--- a/settings.gradle
+++ b/settings.gradle
@@ -4,9 +4,14 @@ pluginManagement {
     mavenCentral()
     gradlePluginPortal()
   }
+  // Gunakan satu versi Kotlin di seluruh proyek
   plugins {
-    id "org.jetbrains.kotlin.android" version "2.0.21"
-    id "org.jetbrains.kotlin.plugin.parcelize" version "2.0.21"
+    id "org.jetbrains.kotlin.android"          version "2.2.10"
+    id "org.jetbrains.kotlin.plugin.parcelize" version "2.2.10"
+    id "org.jetbrains.kotlin.plugin.compose"   version "2.2.10"
+    id "com.android.application"               version "8.11.0"
+    id "com.android.library"                   version "8.11.0"
+    id "com.google.gms.google-services"        version "4.4.3"
   }
 }
 
