--- a/settings.gradle
+++ b/settings.gradle
@@ -4,14 +4,21 @@ pluginManagement {
     mavenCentral()
     gradlePluginPortal()
   }
-  // Gunakan satu versi Kotlin di seluruh proyek
   plugins {
+    // Kotlin & Compose (sinkron)
     id "org.jetbrains.kotlin.android"          version "2.2.10"
     id "org.jetbrains.kotlin.plugin.parcelize" version "2.2.10"
     id "org.jetbrains.kotlin.plugin.compose"   version "2.2.10"
-    id "com.android.application"               version "8.11.0"
-    id "com.android.library"                   version "8.11.0"
+
+    // AGP
+    id "com.android.application" version "8.11.0"
+    id "com.android.library"     version "8.11.0"
+
+    // Google Services
     id "com.google.gms.google-services"        version "4.4.3"
+
+    // Hilt Gradle plugin (resmi)
+    id "com.google.dagger.hilt.android"        version "2.56.2" // dagger.dev docs
   }
 }
 
